--- a/essal/public/css/custom.css
+++ b/essal/public/css/custom.css
@@ -18,6 +18,14 @@
     background-image: -webkit-linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
     background-image: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%);
 }
+[data-path="login"] .page-navbar {
+    background: linear-gradient(45deg, #2a3435 1%, #be633d 64%, #fb613b 97%) !important;
+    height: 120px;
+}
+.btn-login, .btn-signup, .btn-forgot {
+    background: #fb613b !important;
+    color: white !important;
+}
 
 .section-blue:before {
     position: absolute;
