--- a/essal/templates/includes/navbar/navbar_items.html
+++ b/essal/templates/includes/navbar/navbar_items.html
@@ -8,7 +8,10 @@
 		{%- endfor %}
 		-->
 		<a class="btn slogan-desc" href="/home">الرئيسية</a>
+		<a class="btn slogan-desc" href="/about-us">تعرف على هدهد</a>
 		<a class="btn slogan-desc" href="/features">المميزات</a>
+		<a class="btn slogan-desc" href="/login#signup">اشترك مع هدهد</a>
+		<a class="btn slogan-desc" href="/contact-us">اتصل بنا</a>
 	</ul>
 
 	<ul class="nav navbar-buttons">
