--- a/essal/templates/includes/contact_tabs.html
+++ b/essal/templates/includes/contact_tabs.html
@@ -1,9 +1,9 @@
 <div class="banner-tabs tabs-responsive">
    <div class="tabs-container">
         <ul class="nav nav-tabs text-center">
-            <li class="active{% if page=='contactus'   %}"><a href="../about/index.html">عن إيصال</a></li>
+            <li class="active{% if page=='contactus'   %}"><a href="../about/index.html">عن هُدهُد</a></li>
             <li><a href="../about/team/index.html">طاقم العمل</a></li>
-            <li><a href="../about/opinions/index.html">روايات إيصال</a></li>
+            <li><a href="../about/opinions/index.html">روايات هُدهُد</a></li>
             <li class="active{% if page=='contactus'  or not page %}"><a href="index.html">اتصل بنا</a></li>
         </ul>
        <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
