--- a/essal/templates/includes/navbar/navbar_login.html
+++ b/essal/templates/includes/navbar/navbar_login.html
@@ -10,6 +10,6 @@
          <li class="nav-login-btn "><a href="/login" class="btn btn-outline btn-light">الدخول</a></li>
     {% endif %}
 
-    <li class="nav-signup-btn"><a href="/login#signup" class="btn btn-dark">تسجيل الاشتراك</a></li>
+    <li class="nav-signup-btn"><a href="/join-us" class="btn btn-dark">تسجيل الاشتراك</a></li>
 {% endif %}
 {% endif %}
