--- a/essal/templates/pages/common_questions.html
+++ b/essal/templates/pages/common_questions.html
@@ -33,12 +33,12 @@
                                 <ul class="nav nav-sidebar affix-top">
                                     <li class="">
                                         <a href="#essal-information">
-                                            معلومات عن نظام ايصال
+                                            معلومات عن نظام هُدهُد
                                         </a>
                                     </li>
                                     <li class="">
                                         <a href="#registration-packages">
-                                            التسجيل والباقات في ايصال
+                                            التسجيل والباقات في هُدهُد
                                         </a>
                                     </li>
                                     <li class="">
@@ -53,16 +53,16 @@
                     <div class="col-sm-8" style="text-align: right;">
                         <div id="essal-information" class="content-row">
                             <h2 class="m-t-0">
-                                معلومات عن نظام ايصال
+                                معلومات عن نظام هُدهُد
                             </h2>
                             <h3 style="color: #1e88e5;" class="h4">
 
-                                ما هو نظام إيصال لإدارة الأعمال؟
+                                ما هو نظام هُدهُد لإدارة الأعمال؟
 
                             </h3>
                             <p>
 
-                                نظام إيصال هو منظومة متكاملة من برامج الإدارية والمالية المترابطة تساعدك على
+                                نظام هُدهُد هو منظومة متكاملة من برامج الإدارية والمالية المترابطة تساعدك على
                                 إدارة وتشغيل المؤسسة أو الشركة في أي وقت ومن أي مكان من خلال الانترنت.
 
                             </p>
@@ -70,7 +70,7 @@
                             <h3 style="color: #1e88e5;" class="h4">
 
 
-                                ما هي الوحدات التي يتضمنها نظام إيصال لإدارة الأعمال؟
+                                ما هي الوحدات التي يتضمنها نظام هُدهُد لإدارة الأعمال؟
 
 
                             </h3>
@@ -128,7 +128,7 @@
                             <h3 style="color: #1e88e5;" class="h4">
 
 
-                                ما هي الشركات التي يخدمها نظام إيصال لإدارة الأعمال؟
+                                ما هي الشركات التي يخدمها نظام هُدهُد لإدارة الأعمال؟
 
 
                             </h3>
@@ -156,14 +156,14 @@
                             <h3 style="color: #1e88e5;" class="h4" id="vat">
 
 
-                                هل يخدم نظام إيصال الشركات خارج السعودية؟
+                                هل يخدم نظام هُدهُد الشركات خارج السعودية؟
 
 
                             </h3>
 
                             <p>
 
-                                إيصال هو برنامج سحابي لإدارة الأعمال يخدم أي شركة حول العالم ولا يقتصر على بلد
+                                هُدهُد هو برنامج سحابي لإدارة الأعمال يخدم أي شركة حول العالم ولا يقتصر على بلد
                                 أو قُطر معين.
 
                             </p>
@@ -174,13 +174,13 @@
 
                         <div id="registration-packages" class="content-row">
                             <h2 class="m-t-0">
-                                التسجيل والباقات في ايصال
+                                التسجيل والباقات في هُدهُد
 
                             </h2>
                             <h3 style="color: #1e88e5;" class="h4">
 
 
-                                هل يوجد تسجيل تجريبي في نظام إيصال؟
+                                هل يوجد تسجيل تجريبي في نظام هُدهُد؟
 
 
                             </h3>
@@ -208,7 +208,7 @@
                             <h3 style="color: #1e88e5;" class="h4">
 
 
-                                كيف يمكنني الاشتراك في أحد باقات نظام إيصال لإدارة الأعمال؟ وكيف يتم تصنيف
+                                كيف يمكنني الاشتراك في أحد باقات نظام هُدهُد لإدارة الأعمال؟ وكيف يتم تصنيف
                                 الباقات؟
 
 
@@ -242,7 +242,7 @@
                             </h3>
                             <p>
 
-                                يتميز نظام إيصال لإدارة الأعمال بخاصية الدعم الفني المتكاملة والمفصلة التي تتوفر
+                                يتميز نظام هُدهُد لإدارة الأعمال بخاصية الدعم الفني المتكاملة والمفصلة التي تتوفر
                                 في ملفات دعم فني متكاملة وفيديوهات شرح تفصيلية عن كل وحدة على حدا، تُمكن
                                 المستخدم من التعامل مع كافة أجزاء النظام، وأيضا يتوفر فريق دعم فني متكامل على
                                 مدار الساعة.
@@ -268,14 +268,14 @@
 
 
                                 هل يستطيع مدير الشركة نقل البيانات من الشركة إلى النظام مباشرة للبدء باستخدام
-                                نظام إيصال؟
+                                نظام هُدهُد؟
 
 
                             </h3>
 
                             <p>
 
-                                نعم يستطيع نقل البيانات على ملف اكسل ويقوم فريق البرمجة الخاصة بنظام إيصال
+                                نعم يستطيع نقل البيانات على ملف اكسل ويقوم فريق البرمجة الخاصة بنظام هُدهُد
                                 بنقلها للنظام لاستخدامها من قبل مدير الشركة مباشرة مع الحفاظ على السرية التامة
                                 لبيانات مدير الشركة.
 
@@ -289,7 +289,7 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">اشترك اﻵن في إيصال</h2>
+            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
             <form method="post" action="" class="register-form">
                 <input type="hidden" name="action" value="register"/>
