--- a/essal/templates/pages/contact-us.html
+++ b/essal/templates/pages/contact-us.html
@@ -7,16 +7,16 @@
       <div class="page-banner page-banner-subpage p-b-0">
             <div class="container">
                 <div class="banner-slogan banner-slogan-hero">
-                    <h1 class="slogan-title text-center">تواصل مع إيصال</h1>
+                    <h1 class="slogan-title text-center">تواصل مع هُدهُد</h1>
                     <h2 class="slogan-desc text-center">هل لديك استفسارات؟ من فضلك قم بالإطلاع على الأسئلة الأكثر شيوعاً أو اتصل بنا.</h2>
                 </div>
 
                 <div class="banner-tabs tabs-responsive">
                        <div class="tabs-container">
                             <ul class="nav nav-tabs text-center">
-                                <li class=""><a href="/about-us">عن إيصال</a></li>
+                                <li class=""><a href="/about-us">عن هُدهُد</a></li>
                                 <li><a href="/team">طاقم العمل</a></li>
-                                <!--<li><a href="/testimonial">روايات إيصال</a></li>-->
+                                <!--<li><a href="/testimonial">روايات هُدهُد</a></li>-->
                                 <li class="active"><a href="/contact-us">اتصل بنا</a></li>
                             </ul>
                            <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
@@ -45,9 +45,9 @@
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2">
 
-                            <a href="/login" class="btn btn-block btn-default m-b-40">إذا كنت مشترك حالي في إيصال ؟ <div class="text-normal">تواصل الآن مع  الدعم الفني.</div>
-                                <div  class="text-bold">0115115873</div>
-                            </a>
+{#                            <a href="/login" class="btn btn-block btn-default m-b-40">إذا كنت مشترك حالي في هُدهُد ؟ <div class="text-normal">تواصل الآن مع  الدعم الفني.</div>#}
+{#                                <div  class="text-bold">0115115873</div>#}
+{#                            </a>#}
                             <h2>استفسارات عامة</h2>
                             <form method="post">
                                 <input type="hidden" name="csrf_token" value="u6LER5JX/l1Rg12CRKnAI41f+uoZbbVzO1YRGiZ18JU=">
@@ -119,7 +119,7 @@
 
         <div class="page-section section-blue section-center">
             <div class="container">
-                <h2 class="section-title">اشترك اﻵن في إيصال</h2>
+                <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
                 <form method="post" action="" class="register-form">
                     <input type="hidden" name="action" value="register"/>
