--- a/essal/templates/pages/essal_blog.html
+++ b/essal/templates/pages/essal_blog.html
@@ -1,12 +1,12 @@
 {% extends "templates/web.html" %}
 
-{% block title %} مدونة إيصال  {% endblock %}
+{% block title %} مدونة هُدهُد  {% endblock %}
 
 {% block page_banner %}
 <div class="page-banner page-banner-subpage p-b-0">
     <div class="container">
         <div class="banner-slogan banner-slogan-hero">
-            <h1 class="slogan-title text-center"> مدونة إيصال </h1>
+            <h1 class="slogan-title text-center"> مدونة هُدهُد </h1>
         </div>
     </div>
     <!-- /.banner-tabs -->
@@ -120,7 +120,7 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">اشترك اﻵن في إيصال</h2>
+            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
             <form method="post" action="" class="register-form">
                 <input type="hidden" name="action" value="register"/>
