--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -9,24 +9,20 @@
 
                 <h1 class="slogan-desc">نظام مالي و إداري سحابي حاصل على ثقة العديد من الجمعيات والمؤسسات الخيرية</h1>
                 <br>
-                <h2 class="slogan-desc"><strong>كن جزء من الإبداع, اشترك قبل الاطلاق الرسمي واحصل على 30 يوم مجاناً </strong></h2>
+                <h2 class="slogan-desc"><strong>كن جزء من الإبداع، قم بالتسجيل الآن ليكون لك الأولوية عند الإطلاق</strong></h2>
 
                 <form method="post" action="" class="register-form">
                     <input type="hidden" name="action" value="register"/>
                     <input style="display: none;" name="email" value="" autocomplete="off">
 
                     <div class="register-container" style="direction:rtl">
-                        <div class="row">
-                            <div class="col-sm-4">
-                                <input name="name" class="form-control input-lg" type="text" placeholder="الإسم"/>
-                            </div>
-                            <div class="col-sm-4">
-                                <input name="emai" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"/>
-                            </div>
-                            <div class="col-sm-4">
-                                 <input name="password" class="form-control input-lg" type="text"
-                                           placeholder="اسم الشركة"/>
-                            </div>
+                        <div class="form-group">
+                            <input name="emai" class="form-control input-lg" type="text"
+                                   placeholder="البريد الالكتروني"/>
+                        </div>
+                        <div class="form-group">
+                            <input name="password" class="form-control input-lg" type="text"
+                                   placeholder="اسم الشركة"/>
                         </div>
                         <button class="btn btn-primary-light btn-lg" type="submit">
                             الاشتراك
@@ -109,7 +105,7 @@
 
     <div class="page-section section-center">
         <div class="container">
-            <h2 class="section-title">لماذا إيصال؟</h2>
+            <h2 class="section-title">لماذا هُدهُد؟</h2>
 
             <div class="services">
                 <div class="row">
@@ -140,7 +136,7 @@
                             <i class="service-icon service-icon-dedicated image-shadow-sm animate zoomIn"></i>
                             <div class="service-body">
                                 <h3>نظام سحابي متكامل</h3>
-                                <p>جميع البيانات مخزنة سحابياً مع إمكانية الدخول لإيصال من أي مكان دون تكاليف إعداد أو
+                                <p>جميع البيانات مخزنة سحابياً مع إمكانية الدخول لهُدهُد من أي مكان دون تكاليف إعداد أو
                                     صيانة</p>
                             </div>
                         </a>
@@ -242,7 +238,7 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">اشترك اﻵن في إيصال</h2>
+            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
             <form method="post" action="" class="register-form">
                 <input type="hidden" name="action" value="register"/>
@@ -254,7 +250,7 @@
                     </div>
                     <div class="form-group">
                         <input name="password" class="form-control input-lg" type="text"
-                               placeholder="اسم الشركة بالإنجليزية"/>
+                               placeholder="اسم الشركة"/>
                     </div>
                     <button class="btn btn-primary-light btn-lg" type="submit">
                         الاشتراك
