--- a/essal/templates/pages/testimonial.html
+++ b/essal/templates/pages/testimonial.html
@@ -1,7 +1,7 @@
 
 {% extends "templates/web.html" %}
 
-{% block title %}  روايات ايصال  {% endblock %}
+{% block title %}  روايات هُدهُد  {% endblock %}
 
 {% block page_banner %}
 
@@ -9,14 +9,14 @@
 		<div class="container">
 			<div class="banner-slogan banner-slogan-hero">
 				<h1 class="slogan-title text-center"> شهادات عملائنا </h1>
-				<h2 class="slogan-desc text-center"> اكتشف المؤسسات ورجال الأعمال مثلك الذين يستخدمون ايصال</h2>
+				<h2 class="slogan-desc text-center"> اكتشف المؤسسات ورجال الأعمال مثلك الذين يستخدمون هُدهُد</h2>
 			</div>
 			<div class="banner-tabs tabs-responsive">
 			<div class="tabs-container">
 			<ul class="nav nav-tabs text-center">
-				<li><a href="/about-us">عن إيصال</a></li>
+				<li><a href="/about-us">عن هُدهُد</a></li>
 				<li ><a href="/team">طاقم العمل</a></li>
-				<!--<li class="active"><a>روايات إيصال</a></li>-->
+				<!--<li class="active"><a>روايات هُدهُد</a></li>-->
 				<li><a href="contact-us">اتصل بنا</a></li>
 			</ul>
 		<button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
@@ -98,8 +98,8 @@
 									<img src="assets/essal/img/png/qout1.png">
 								</div>
 								<p>
-									إيصال نظام متكامل ورائع ساهم في تطوير وتنظيم أعمال شركتي ومتابعة مباشرة من أي مكان
-									وسهل عمل الموظفين في الأقسام المختلفة أتمنى لإيصال مزيدا من التطور والتميز وفي انتظار مفاجآت سارة.
+									هُدهُد نظام متكامل ورائع ساهم في تطوير وتنظيم أعمال شركتي ومتابعة مباشرة من أي مكان
+									وسهل عمل الموظفين في الأقسام المختلفة أتمنى لهُدهُد مزيدا من التطور والتميز وفي انتظار مفاجآت سارة.
 								</p>
 							</div>
 
@@ -123,7 +123,7 @@
 	<!-- /.page-section -->
 	<div class="page-section section-white section-center">
 		<div class="container">
-			<h2 class="section-title">  اشترك الآن وجرب إيصال لمدة 30 يوماً مجاناً </h2>
+			<h2 class="section-title">  اشترك الآن وجرب هُدهُد لمدة 30 يوماً مجاناً </h2>
 
 			<form method="post" action="" class="register-form">
 				<input type="hidden" name="action" value="register"/>
