--- a/essal/templates/includes/footer/bottom_footer.html
+++ b/essal/templates/includes/footer/bottom_footer.html
@@ -3,7 +3,7 @@
 				<div class="row">
 					<div class="col-lg-6 col-lg-push-6 col-xs-12">
 						<ul class="nav">
-							<li><a href="/rules"> شروط و أحكام </a></li>
+							{#<li><a href="/rules"> شروط و أحكام </a></li>#}
 							<!-- <li><a href="legal/use_policy/index.html">AUP / DMCA</a></li> -->
 							<!--<li><a href="legal/privacy/index.html">سياسة الخصوصية</a></li>-->
 						</ul>
@@ -11,8 +11,8 @@
                         </ul>
 						<ul class="social">
                             <li><a href="/contact-us" class="btn btn-primary btn-circle btn-icon btn-outline btn-sm"><i class="zmdi zmdi-email"></i></a></li>
-                            <li><a href="https://www.facebook.com" class="btn btn-primary btn-circle btn-icon btn-outline btn-sm"><i class="zmdi zmdi-facebook"></i></a></li> <!-- http://4.essal.io -->
-                            <li><a href="https://twitter.com" class="btn btn-primary btn-circle btn-icon btn-outline btn-sm"><i class="zmdi zmdi-twitter"></i></a></li> <!-- http://4.essal.io -->
+                            <li><a href="#" class="btn btn-primary btn-circle btn-icon btn-outline btn-sm"><i class="zmdi zmdi-facebook"></i></a></li> <!-- http://4.essal.io -->
+                            <li><a href="#" class="btn btn-primary btn-circle btn-icon btn-outline btn-sm"><i class="zmdi zmdi-twitter"></i></a></li> <!-- http://4.essal.io -->
 						</ul>
 					</div>
 					<div class="col-lg-6 col-lg-pull-6 col-xs-12">
