--- a/essal/templates/includes/footer/top_footer.html
+++ b/essal/templates/includes/footer/top_footer.html
@@ -2,11 +2,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-3">
-						<h4>أسعار إيصال</h4>
+						<h4>الرئيسية</h4>
 						<ul>
-							<li><a href="/price">حاسبة الأسعار</a></li>
-							<li><a href="/price">باقات إيصال</a></li>
-							<li><a href="/login#signup">تجربة إيصال مجاناً</a></li>
+							<li><a href="/about-us">تعرّف على هُدهُد</a></li>
+							<li><a href="/features">المميزات</a></li>
+							<li><a href="/join-us">اشترك مع هُدهُد</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
@@ -23,7 +23,7 @@
 							<li><a href="/details?title=نظام ادارة المخازن">إدارة المخازن</a></li>
                             <li><a href="/details?title=نظام ادارة المهام">إدارة المهام و الأنشطة</a></li>
                             <li><a href="/details?title=مدير الملفات">إدارة الملفات</a></li>
-                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة إيصال التعليمية</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة هُدهُد التعليمية</a></li>
                             <li><a href="javascript:void(0)">أرشفة دورية</a></li>
                             <li><a href="javascript:void(0)">تشفير البيانات</a></li>
 						</ul>
@@ -34,17 +34,17 @@
 							<li><a href="/common_questions.html">الأسئلة الشائعة</a></li>
 							<li><a href="api/index.html">دليل المستخدم</a></li>
 							<li><a href="docs/index.html">فيديوهات تعليمية   </a></li>
-							<li><a href="/essal_blog.html">مدونة إيصال</a></li>
+							<li><a href="/essal_blog.html">مدونة هُدهُد</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
 						<h4>حول الشركة</h4>
 						<ul>
-							<!-- <li><a href="about/index.html">حول الشركة</a></li> -->
-							<li><a href="/about-us.html">نبذة عن إيصال</a></li>
+							<li><a href="about/index.html">حول شركة التقنية المباركة</a></li>
+							<li><a href="/about-us.html">نبذة عن إصدارات الشركة</a></li>
 							<li><a href="/team.html">طاقم العمل</a></li>
 							<!--<li><a href="affiliate/index.html">شهادات تقدير العملاء</a></li>-->
-							<!--<li><a href="corporate/careers/index.html">روايات إيصال</a></li>-->
+							<!--<li><a href="corporate/careers/index.html">روايات هُدهُد</a></li>-->
     						<li><a href="/contact-us">اتصل بنا</a></li>
 							<li></li>
 						</ul>
