--- a/essal/templates/pages/about-us.html
+++ b/essal/templates/pages/about-us.html
@@ -1,23 +1,23 @@
 {% extends "templates/web.html" %}
 
-{% block title %} حول الشركة {% endblock %}
+{% block title %} حول هُدهُد {% endblock %}
 
 {% block page_banner %}
 
       <div class="page-banner page-banner-subpage p-b-0">
             <div class="container">
                 <div class="banner-slogan banner-slogan-hero">
-                    <h1 class="slogan-title text-center">أهلا بك في إيصال  </h1>
+                    <h1 class="slogan-title text-center">أهلا بك في هُدهُد  </h1>
 
-                    <h2 class="slogan-desc text-center"> <span class="out-goal-txt">رسالتنا:</span> توفير منظومة إدارية متكاملة للمنشآت، ذات إحترافية وكفائة عالية، وتتميز بخدمة دعم فني متكاملة، لنحقق بذلك أعلى رضا لعملائنا الذين هم جوهر نجاحنا.</h2>
+                    <h2 class="slogan-desc text-center"> <span class="out-goal-txt">رسالتنا:</span> توفير منظومة إدارية متكاملة للجمعيات الخيرية، ذات إحترافية وكفائة عالية، وتتميز بخدمة دعم فني متكاملة، لنحقق بذلك أعلى رضا لعملائنا الذين هم جوهر نجاحنا.</h2>
                 </div>
 
                   <div class="banner-tabs tabs-responsive">
                        <div class="tabs-container">
                             <ul class="nav nav-tabs text-center">
-                                <li class="active"><a href="/about-us">عن إيصال</a></li>
+                                <li class="active"><a href="/about-us">عن هُدهُد</a></li>
                                 <li><a href="/team.html">طاقم العمل</a></li>
-                                <!--<li><a href="/testimonial.html">روايات إيصال</a></li>-->
+                                <!--<li><a href="/testimonial.html">روايات هُدهُد</a></li>-->
                                 <li class=""><a href="/contact-us">اتصل بنا</a></li>
                             </ul>
                            <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
@@ -42,62 +42,62 @@
                 <div class="section-row row">
                     <div class="col-sm-6 col-sm-push-6">
                         <div class="section-image">
-                            <img src="assets/essal/img/png/logo.png">
+                            <img src="assets/essal/img/png/logo2.png">
                         </div>
                     </div>
                     <div class="col-md-5 col-sm-6 col-sm-pull-6">
                         <h2 class="section-title">تعرف علينا أكثر...</h2>
 
                         <p class="section-desc">
-                            إيصال - أكثر من مجرد برنامج أو نظام، بل هو منظومة متكاملة للإدارة والتحكم في المنشئات التجارية وغير التجارية، يمكن إيصال أصحاب المنشئات من الإبحار في عالم موارد المنشئة ليعطي تحكما كاملا بجميع بياناتها وأجزائها مع خدمة دعم فني كامل وتدريب احترافي، وتجعل التقنيات السحابية من إيصال عالما يمكن الوصول له من أي مكان وفي أي وقت ليضمن أفضل النتائج بأقل التكاليف وأسرع الطرق.
+                           هدهد - أكثر من مجرد برنامج أو نظام، بل هو منظومة متكاملة للإدارة والتحكم في المؤسسات والجمعيات الخيرية، يمكن هدهد أصحاب الجمعيات من الإبحار في عالم موارد الجمعية ليعطي تحكما كاملا بجميع بياناتها وأجزائها، إضافة إلى خدمة الدعم الفني المتكامل والتدريب الاحترافي، وتجعل اعتماد هدهد على التقنيات السحابية  عالما يمكن الوصول له من أي مكان وفي أي وقت ليضمن أفضل النتائج بأقل التكاليف وأسرع الطرق.
                         </p>
 
 
                     </div>
                 </div>
-                <div class="features features-icon-left">
-                    <div class="row">
-                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">
-                            <div class="display-3 text-primary features-more-display">
-                            </div>
-                            <p>
-                                عدد المستخدمين الذين يثقون بإيصال ويعتمدون عليه، يزداد يوما بعد يوم، فهو يوفر لهم جميع ما يحتاجونه لإدارة شركاتهم، من أي مكان، وفي أي وقت، وبكل سهولة أيضا.
-                            </p>
-                        </div>
-                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">
-                            <div class="display-3 text-primary features-more-display">
-                            </div>
-                            <p>
-
-                                 يعتمد عملاء إيصال في جميع معاملاتهم على الخدمات السحابية التي تقدمها إيصال فهي أكثر احترافية وأقل تكلفة.
-
-                            </p>
-                        </div>
-                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">
-                            <div class="display-3 text-primary features-more-display">
-                            </div>
-                            <p>
-                                أنظمة إيصال الإدارية تساعد أصحاب الشركات والمؤسسات على التحكم بجميع جوانبها بأسهل الطرق وأسرعها.
-
-                            </p>
-                        </div>
-                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">
-                            <div class="display-3 text-primary features-more-display">
-                            </div>
-                            <p>
-                                نحن نسعد بعملائنا ونفخر بمساعدتهم للاستفادة من أفضل مميزات إيصال، حيث يعمل فريقنا للإجابة على أكثرمن 2000 استفسار شهريا.
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
+{#                <div class="features features-icon-left">#}
+{#                    <div class="row">#}
+{#                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">#}
+{#                            <div class="display-3 text-primary features-more-display">#}
+{#                            </div>#}
+{#                            <p>#}
+{#                                عدد المستخدمين الذين يثقون بهُدهُد ويعتمدون عليه، يزداد يوما بعد يوم، فهو يوفر لهم جميع ما يحتاجونه لإدارة شركاتهم، من أي مكان، وفي أي وقت، وبكل سهولة أيضا.#}
+{#                            </p>#}
+{#                        </div>#}
+{#                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">#}
+{#                            <div class="display-3 text-primary features-more-display">#}
+{#                            </div>#}
+{#                            <p>#}
+{##}
+{#                                 يعتمد عملاء هُدهُد في جميع معاملاتهم على الخدمات السحابية التي تقدمها هُدهُد فهي أكثر احترافية وأقل تكلفة.#}
+{##}
+{#                            </p>#}
+{#                        </div>#}
+{#                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">#}
+{#                            <div class="display-3 text-primary features-more-display">#}
+{#                            </div>#}
+{#                            <p>#}
+{#                                أنظمة هُدهُد الإدارية تساعد أصحاب الشركات والمؤسسات على التحكم بجميع جوانبها بأسهل الطرق وأسرعها.#}
+{##}
+{#                            </p>#}
+{#                        </div>#}
+{#                        <div class="col-sm-3 col-xs-6" style="padding-top: 5px;">#}
+{#                            <div class="display-3 text-primary features-more-display">#}
+{#                            </div>#}
+{#                            <p>#}
+{#                                نحن نسعد بعملائنا ونفخر بمساعدتهم للاستفادة من أفضل مميزات هُدهُد، حيث يعمل فريقنا للإجابة على أكثرمن 2000 استفسار شهريا.#}
+{##}
+{#                            </p>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </div>
 
 
         <div class="page-section">
             <div class="container">
-                <h2 class="section-title text-center">ما يميز إيصال</h2>
+                <h2 class="section-title text-center">ما يميز هُدهُد</h2>
 
                 <div class="features features-icon-right">
                     <div class="row">
@@ -108,8 +108,7 @@
                                 <h3 class="h4">سحابي</h3>
 
                                 <p>
-                                    من أي مكان وفي أي وقت يمكنك إدارة شركتك والربط بين فروعك بكل يسر وسهولة فإيصال يعتمد التقنيات السحابية
-
+                                    من أي مكان وفي أي وقت يمكنك إدارة موارد الجمعية والربط بين فروعها بكل يسر وسهولة فهدهد يعتمد التقنيات السحابية
                                 </p>
                             </div>
                         </div>
@@ -120,7 +119,7 @@
                                 <h3 class="h4">آمن</h3>
 
                                 <p>
-                                    الأمن أولا وقبل كل شيء فإيصال يحفظ بياناتك بعيدا عن كل المخاطر ويستخدم أفضل تقنيات حماية البيانات عاليما
+                                    الأمن أولا وقبل كل شيء فهُدهُد يحفظ بياناتك بعيدا عن كل المخاطر ويستخدم أفضل تقنيات حماية البيانات عاليما
 
                                 </p>
                             </div>
@@ -133,7 +132,7 @@
                                 <h3 class="h4">الدعم الفني</h3>
 
                                 <p>
-                                    لا تقلق مهما كانت المشكلة التي تواجهها فمع آليات الدعم الفني المتوفرة في إيصال بإمكانك الحصول على أفضل الحلول بأسرع وقت ووأفضل كفائة
+                                    لا تقلق مهما كانت المشكلة التي تواجهها فمع آليات الدعم الفني المتوفرة في هُدهُد بإمكانك الحصول على أفضل الحلول بأسرع وقت ووأفضل كفائة
 
                                 </p>
                             </div>
@@ -146,7 +145,7 @@
                                 <h3 class="h4">التحديث</h3>
 
                                 <p>
-                                    يضمن إيصال استخدام أحدث التقنيات في عالم التكنولوجيا، والتي تجعل أنظمته في مطلع أنظمة إدارة المنشئات عالميا
+                                    يضمن هُدهُد استخدام أحدث التقنيات في عالم التكنولوجيا، والتي تجعل أنظمته في مطلع أنظمة إدارة المنشئات عالميا
 
                                 </p>
                             </div>
@@ -159,7 +158,7 @@
                                 <h3 class="h4">متوافق</h3>
 
                                 <p>
-                                    ما يميز إيصال توافقه مع جميع شاشات العرض فبإمكانك الإدارة والتحكم بمنشئتك من الجوال أو التابلت أو من حاسوبك الشخصي
+                                    ما يميز هُدهُد توافقه مع جميع شاشات العرض فبإمكانك الإدارة والتحكم بموارد الجمعية من الجوال أو التابلت أو من حاسوبك الشخصي
 
                                 </p>
                             </div>
@@ -185,7 +184,7 @@
         <!-- /.page-section -->
 		<div class="page-section section-blue section-center">
 		<div class="container">
-			<h2 class="section-title">اشترك اﻵن في إيصال</h2>
+			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
 			<form method="post" action="" class="register-form">
 				<input type="hidden" name="action" value="register"/>
