--- a/essal/templates/pages/careers.html
+++ b/essal/templates/pages/careers.html
@@ -9,7 +9,7 @@
     	<div class="page-banner page-banner-subpage p-b-0">
 		<div class="container">
 			<div class="banner-slogan banner-slogan-hero">
-				<h1 class="slogan-title text-center">  انضم لفريق ايصال  </h1>
+				<h1 class="slogan-title text-center">  انضم لفريق هُدهُد  </h1>
 				<h2 class="slogan-desc text-center"> نبحث عن المواهب ونسعى معها للوصول للاحترافيه في صناعة الابداع، نحتاج لموهبتك كي نحقق الهدف معا.</h2>
 			</div>
 		</div>
@@ -59,7 +59,7 @@
 
 		<div class="page-section section-blue section-center">
 		<div class="container">
-			<h2 class="section-title">اشترك اﻵن في إيصال</h2>
+			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
 			<form method="post" action="" class="register-form">
 				<input type="hidden" name="action" value="register"/>
