--- a/essal/templates/pages/details.html
+++ b/essal/templates/pages/details.html
@@ -7,7 +7,7 @@
 			<div class="container">
 				<div class="banner-slogan banner-slogan-hero">
 					<h1 class="slogan-title text-center">  المميزات  </h1>
-					<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات ايصال، مع الإعداد والتدريب مجاناً</h2>
+					<h2 class="slogan-desc text-center">اشترك الآن وتمتع باستخدام مزايا وتطبيقات هُدهُد، مع الإعداد والتدريب مجاناً</h2>
 				</div>
 			</div>
 			<!-- /.banner-tabs -->
@@ -56,7 +56,7 @@
 	<!-- /.page-section -->
 		<div class="page-section section-blue section-center">
 		<div class="container">
-			<h2 class="section-title">اشترك اﻵن في إيصال</h2>
+			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
 			<form method="post" action="" class="register-form">
 				<input type="hidden" name="action" value="register"/>
