--- a/essal/templates/pages/team.html
+++ b/essal/templates/pages/team.html
@@ -8,15 +8,15 @@
      <div class="page-banner page-banner-subpage p-b-0">
 		<div class="container">
 			<div class="banner-slogan banner-slogan-hero">
-				<h1 class="slogan-title text-center">فريق إيصال</h1>
+				<h1 class="slogan-title text-center">فريق هُدهُد</h1>
 				<h2 class="slogan-desc text-center">طاقم فني عالمي متخصص ذو خبرة و طابع مميز يكرسون طاقاتهم في مجالات عملهم</h2>
 			</div>
 			<div class="banner-tabs tabs-responsive">
 			<div class="tabs-container">
 			<ul class="nav nav-tabs text-center">
-				<li><a href="/about-us">عن إيصال</a></li>
+				<li><a href="/about-us">عن هُدهُد</a></li>
 				<li class="active"><a href="/team">طاقم العمل</a></li>
-				<!--<li><a href="/testimonial">روايات إيصال</a></li>-->
+				<!--<li><a href="/testimonial">روايات هُدهُد</a></li>-->
 				<li><a href="/contact-us">اتصل بنا</a></li>
 			</ul>
 		<button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
@@ -81,7 +81,7 @@
 
 	<div class="page-section section-center">
     <div class="container">
-        <h2 class="section-title">هل ترغب في الانضمام إلى عائلة إيصال؟</h2>
+        <h2 class="section-title">هل ترغب في الانضمام إلى عائلة هُدهُد؟</h2>
         <div class="actions"><a class="btn btn-lg btn-primary btn-outline" href="/careers">استعرض الوظائف الشاغرة<i class="zmdi zmdi-long-arrow-left"></i></a></div>
     </div>
 </div>
