--- a/essal/templates/includes/footer/top_footer.html
+++ b/essal/templates/includes/footer/top_footer.html
@@ -6,24 +6,39 @@
 						<ul>
 							<li><a href="/about-us">تعرّف على هُدهُد</a></li>
 							<li><a href="/features">المميزات</a></li>
-							<li><a href="/join-us">اشترك مع هُدهُد</a></li>
+							<li><a href="/join_us">اشترك مع هُدهُد</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
 						<h4>المميزات</h4>
 						<ul class="footer-features-list">
-							<li><a href="/details?title=نظام المحاسبة">نظام المحاسبة</a></li>
-							<li><a href="/details?title=نظام المبيعات">نظام المبيعات و نقاط البيع</a></li>
-							<li><a href="/details?title=نظام المشتريات">نظام المشتريات</a></li>
-							<li><a href="/details?title=إدارة الموارد البشرية">إدارة الموارد البشرية</a></li>
-							<li><a href="/details?title=نظام إدارة علاقات العملاء">نظام إدارة علاقات العملاء</a></li>
-							<li><a href="/details?title=نظام إدارة المشاريع">نظام إدارة المشاريع</a></li>
-							<li><a href="/details?title=إدارة التصنيع و الإنتاج">إدارة التصنيع و الإنتاج</a></li>
-							<li><a href="/details?title=الدعم الفني">الدعم الفني</a></li>
-							<li><a href="/details?title=نظام ادارة المخازن">إدارة المخازن</a></li>
-                            <li><a href="/details?title=نظام ادارة المهام">إدارة المهام و الأنشطة</a></li>
-                            <li><a href="/details?title=مدير الملفات">إدارة الملفات</a></li>
-                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة هُدهُد التعليمية</a></li>
+{#                            <li><a href="/details?title=نظام جمع التبرعات">نظام جمع التبرعات</a></li>#}
+{#							<li><a href="/details?title=نظام المبيعات">نظام المبيعات و نقاط البيع</a></li>#}
+{#							<li><a href="/details?title=نظام المشتريات">نظام المشتريات</a></li>#}
+{#							<li><a href="/details?title=إدارة الموارد البشرية">إدارة الموارد البشرية</a></li>#}
+{#							<li><a href="/details?title=نظام إدارة علاقات العملاء">نظام إدارة علاقات العملاء</a></li>#}
+{#							<li><a href="/details?title=نظام إدارة المشاريع">نظام إدارة المشاريع</a></li>#}
+{#							<li><a href="/details?title=نظام المحاسبة">نظام المحاسبة</a></li>#}
+{#							<li><a href="/details?title=الدعم الفني">الدعم الفني</a></li>#}
+{#							<li><a href="/details?title=نظام ادارة المخازن">إدارة المخازن</a></li>#}
+{#                            <li><a href="/details?title=نظام ادارة المهام">إدارة المهام و الأنشطة</a></li>#}
+{#                            <li><a href="/details?title=مدير الملفات">إدارة الملفات</a></li>#}
+{#                            <li><a href="https://www.youtube.com/channel/UCKujtN211okUH13pzDfcPdw">قناة هُدهُد التعليمية</a></li>#}
+{#                            <li><a href="javascript:void(0)">أرشفة دورية</a></li>#}
+{#                            <li><a href="javascript:void(0)">تشفير البيانات</a></li>#}
+
+							<li><a href="javascript:void(0)">نظام جمع التبرعات</a></li>
+							<li><a href="javascript:void(0)">نظام المبيعات و نقاط البيع</a></li>
+							<li><a href="javascript:void(0)">نظام المشتريات</a></li>
+							<li><a href="javascript:void(0)">إدارة الموارد البشرية</a></li>
+							<li><a href="javascript:void(0)">نظام إدارة علاقات العملاء</a></li>
+							<li><a href="javascript:void(0)">نظام إدارة المشاريع</a></li>
+							<li><a href="javascript:void(0)">نظام المحاسبة</a></li>
+							<li><a href="javascript:void(0)">الدعم الفني</a></li>
+							<li><a href="javascript:void(0)">إدارة المخازن</a></li>
+                            <li><a href="javascript:void(0)">إدارة المهام و الأنشطة</a></li>
+                            <li><a href="javascript:void(0)">إدارة الملفات</a></li>
+                            <li><a href="javascript:void(0)">قناة هُدهُد التعليمية</a></li>
                             <li><a href="javascript:void(0)">أرشفة دورية</a></li>
                             <li><a href="javascript:void(0)">تشفير البيانات</a></li>
 						</ul>
@@ -32,17 +47,20 @@
 						<h4>مركز الدعم</h4>
 						<ul>
 							<li><a href="/common_questions.html">الأسئلة الشائعة</a></li>
-							<li><a href="api/index.html">دليل المستخدم</a></li>
-							<li><a href="docs/index.html">فيديوهات تعليمية   </a></li>
-							<li><a href="/essal_blog.html">مدونة هُدهُد</a></li>
+{#							<li><a href="api/index.html">دليل المستخدم</a></li>#}
+{#							<li><a href="docs/index.html">فيديوهات تعليمية   </a></li>#}
+{#                            <li><a href="/essal_blog.html">مدونة هُدهُد</a></li>#}
+							<li><a href="javascript:void(0)">دليل المستخدم</a></li>
+							<li><a href="javascript:void(0)">فيديوهات تعليمية   </a></li>
+							<li><a href="javascript:void(0)">مدونة هُدهُد</a></li>
 						</ul>
 					</div>
 					<div class="col-xs-3">
 						<h4>حول الشركة</h4>
 						<ul>
-							<li><a href="about/index.html">حول شركة التقنية المباركة</a></li>
-							<li><a href="/about-us.html">نبذة عن إصدارات الشركة</a></li>
-							<li><a href="/team.html">طاقم العمل</a></li>
+							<li><a target="_blank" href="https://altqniah.sa/">حول شركة التقنية المباركة</a></li>
+{#							<li><a href="/about-us.html">نبذة عن إصدارات الشركة</a></li>#}
+{#							<li><a href="/team.html">طاقم العمل</a></li>#}
 							<!--<li><a href="affiliate/index.html">شهادات تقدير العملاء</a></li>-->
 							<!--<li><a href="corporate/careers/index.html">روايات هُدهُد</a></li>-->
     						<li><a href="/contact-us">اتصل بنا</a></li>
