--- a/essal/templates/pages/essal_blog.html
+++ b/essal/templates/pages/essal_blog.html
@@ -120,24 +120,30 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
+            <h2 class="section-title">حلّق مع هُدهُد</h2>
 
-            <form method="post" action="" class="register-form">
-                <input type="hidden" name="action" value="register"/>
-                <input style="display: none;" name="email" value="" autocomplete="off">
+            <a class="btn btn-primary-light btn-lg" href="/join_us">
+                اشترك الآن
+            </a>
 
-                <div class="register-container">
-                    <div class="form-group">
-                        <input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"
-                               required/>
-                    </div>
-                    <div class="form-group">
-                        <input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور"
-                               required/>
-                    </div>
-                    <button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>
-                </div>
-            </form>
+{#            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{##}
+{#            <form method="post" action="" class="register-form">#}
+{#                <input type="hidden" name="action" value="register"/>#}
+{#                <input style="display: none;" name="email" value="" autocomplete="off">#}
+{##}
+{#                <div class="register-container">#}
+{#                    <div class="form-group">#}
+{#                        <input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"#}
+{#                               required/>#}
+{#                    </div>#}
+{#                    <div class="form-group">#}
+{#                        <input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور"#}
+{#                               required/>#}
+{#                    </div>#}
+{#                    <button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>#}
+{#                </div>#}
+{#            </form>#}
 
         </div>
     </div>
