--- a/essal/templates/includes/navbar/navbar_items.html
+++ b/essal/templates/includes/navbar/navbar_items.html
@@ -10,7 +10,7 @@
 		<a class="btn slogan-desc" href="/home">الرئيسية</a>
 		<a class="btn slogan-desc" href="/about-us">تعرف على هُدهُد</a>
 		<a class="btn slogan-desc" href="/features">المميزات</a>
-		<a class="btn slogan-desc" href="/join-us">اشترك مع هُدهُد</a>
+		<a class="btn slogan-desc" href="/join_us">اشترك مع هُدهُد</a>
 		<a class="btn slogan-desc" href="/contact-us">اتصل بنا</a>
 	</ul>
 
