--- a/essal/templates/pages/about-us.html
+++ b/essal/templates/pages/about-us.html
@@ -184,22 +184,29 @@
         <!-- /.page-section -->
 		<div class="page-section section-blue section-center">
 		<div class="container">
-			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
 
-			<form method="post" action="" class="register-form">
-				<input type="hidden" name="action" value="register"/>
-								<input style="display: none;" name="email" value="" autocomplete="off">
+            <h2 class="section-title">حلّق مع هُدهُد</h2>
 
-				<div class="register-container">
-					<div class="form-group">
-						<input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>
-					</div>
-					<div class="form-group">
-						<input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>
-					</div>
-					<button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>
-				</div>
-			</form>
+            <a class="btn btn-primary-light btn-lg" href="/join_us">
+                اشترك الآن
+            </a>
+
+{#			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{##}
+{#			<form method="post" action="" class="register-form">#}
+{#				<input type="hidden" name="action" value="register"/>#}
+{#								<input style="display: none;" name="email" value="" autocomplete="off">#}
+{##}
+{#				<div class="register-container">#}
+{#					<div class="form-group">#}
+{#						<input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>#}
+{#					</div>#}
+{#					<div class="form-group">#}
+{#						<input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>#}
+{#					</div>#}
+{#					<button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>#}
+{#				</div>#}
+{#			</form>#}
 
 		</div>
 	</div>
