--- a/essal/templates/pages/contact-us.html
+++ b/essal/templates/pages/contact-us.html
@@ -4,37 +4,41 @@
 
 {% block page_banner %}
 
-      <div class="page-banner page-banner-subpage p-b-0">
-            <div class="container">
-                <div class="banner-slogan banner-slogan-hero">
-                    <h1 class="slogan-title text-center">تواصل مع هُدهُد</h1>
-                    <h2 class="slogan-desc text-center">هل لديك استفسارات؟ من فضلك قم بالإطلاع على الأسئلة الأكثر شيوعاً أو اتصل بنا.</h2>
-                </div>
-
-                <div class="banner-tabs tabs-responsive">
-                       <div class="tabs-container">
-                            <ul class="nav nav-tabs text-center">
-                                <li class=""><a href="/about-us">عن هُدهُد</a></li>
-                                <li><a href="/team">طاقم العمل</a></li>
-                                <!--<li><a href="/testimonial">روايات هُدهُد</a></li>-->
-                                <li class="active"><a href="/contact-us">اتصل بنا</a></li>
-                            </ul>
-                           <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab"><i class="zmdi zmdi-chevron-left"></i></button>
-                           <button class="btn btn-icon btn-link btn-next" type="button" data-click="next-tab"><i class="zmdi zmdi-chevron-right"></i></button>
-                       </div>
-                </div>
-
-
+    <div class="page-banner page-banner-subpage p-b-0">
+        <div class="container">
+            <div class="banner-slogan banner-slogan-hero">
+                <h1 class="slogan-title text-center">تواصل مع هُدهُد</h1>
+                <h2 class="slogan-desc text-center">هل لديك استفسارات؟ من فضلك قم بالإطلاع على الأسئلة الأكثر شيوعاً أو
+                    اتصل بنا.</h2>
             </div>
-		<!-- /.banner-tabs -->
+
+            <div class="banner-tabs tabs-responsive">
+                <div class="tabs-container">
+                    <ul class="nav nav-tabs text-center">
+                        <li class=""><a href="/about-us">عن هُدهُد</a></li>
+                        {#<li><a href="/team">طاقم العمل</a></li>#}
+                        <!--<li><a href="/testimonial">روايات هُدهُد</a></li>-->
+                        <li class="active"><a href="/contact-us">اتصل بنا</a></li>
+                    </ul>
+                    <button class="btn btn-icon btn-link btn-prev" type="button" data-click="prev-tab">
+                        <i class="zmdi zmdi-chevron-left"></i>
+                    </button>
+                    <button class="btn btn-icon btn-link btn-next" type="button" data-click="next-tab">
+                        <i class="zmdi zmdi-chevron-right"></i>
+                    </button>
+                </div>
+            </div>
+
+
         </div>
-        <!-- /.page-banner -->
-{%  endblock %}
+        <!-- /.banner-tabs -->
+    </div>
+    <!-- /.page-banner -->
+{% endblock %}
 
 {% block content %}
 
     <div class="contactus">
-
 
 
         <div class="page-main">
@@ -45,12 +49,13 @@
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2">
 
-{#                            <a href="/login" class="btn btn-block btn-default m-b-40">إذا كنت مشترك حالي في هُدهُد ؟ <div class="text-normal">تواصل الآن مع  الدعم الفني.</div>#}
-{#                                <div  class="text-bold">0115115873</div>#}
-{#                            </a>#}
+                            {#                            <a href="/login" class="btn btn-block btn-default m-b-40">إذا كنت مشترك حالي في هُدهُد ؟ <div class="text-normal">تواصل الآن مع  الدعم الفني.</div>#}
+                            {#                                <div  class="text-bold">0115115873</div>#}
+                            {#                            </a>#}
                             <h2>استفسارات عامة</h2>
                             <form method="post">
-                                <input type="hidden" name="csrf_token" value="u6LER5JX/l1Rg12CRKnAI41f+uoZbbVzO1YRGiZ18JU=">
+                                <input type="hidden" name="csrf_token"
+                                       value="u6LER5JX/l1Rg12CRKnAI41f+uoZbbVzO1YRGiZ18JU=">
                                 <input type="hidden" name="action" value="send_message">
                                 <div style="display: none">
                                     Ignore:
@@ -58,53 +63,59 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="control-label">نوع الاستفسار</label>
-                                    <select name="topic_type" class="form-control" onchange="if($(this).val()=='abuse_or_dmca'){}">
+                                    <select name="topic_type" class="form-control"
+                                            onchange="if($(this).val()=='abuse_or_dmca'){}">
                                         <option value="general_inquires">استفسارات عامة</option>
                                         <option value="abuse_or_dmca">شكوى</option>
                                     </select>
                                 </div>
 
 
-
                                 <div class="row ">
                                     <div class="col-sm-6 padding-zero">
                                         <div class="form-group ">
-                                            <input type="text" name="company_name" value="" class="form-control floatlabel" placeholder="الشركة"/>
+                                            <input type="text" name="company_name" value=""
+                                                   class="form-control floatlabel" placeholder="الشركة"/>
                                         </div>
                                     </div>
                                     <div class="col-sm-6 padding-zero">
                                         <div class="form-group">
-                                            <input type="text" name="client_name" value="" class="form-control floatlabel" placeholder=" الاسم"/>
+                                            <input type="text" name="client_name" value=""
+                                                   class="form-control floatlabel" placeholder=" الاسم"/>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="email" value="" class="form-control floatlabel" placeholder="البريد الالكتروني" required/>
+                                    <input type="text" name="email" value="" class="form-control floatlabel"
+                                           placeholder="البريد الالكتروني" required/>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" name="subject" value="" class="form-control floatlabel" placeholder="الموضوع"/>
+                                    <input type="text" name="subject" value="" class="form-control floatlabel"
+                                           placeholder="الموضوع"/>
                                 </div>
                                 <div class="form-group">
-                                    <textarea name="message" class="form-control" rows="10" placeholder="الرسالة"></textarea>
+                                    <textarea name="message" class="form-control" rows="10"
+                                              placeholder="الرسالة"></textarea>
                                 </div>
                                 <div>
-                                    <button type="submit" class="cu-btn-send btn btn-lg btn-block btn-primary">إرسال</button>
+                                    <button type="submit" class="cu-btn-send btn btn-lg btn-block btn-primary">إرسال
+                                    </button>
                                 </div>
                             </form>
 
                         </div>
-                       <!-- <div class="col-sm-3 col-sm-offset-1">
-                            <h2 class="h3">العنوان</h2>
-                            <p class="address">
-                                السعودية-القصيم-طريق الأربعين<br/>
-                                مقابل بنك الراجحي
-                            </p>
-                            <h2 class="h3">الهاتف</h2>
-                            <p class="address">
-                                00970599020619
-                            </p>
+                        <!-- <div class="col-sm-3 col-sm-offset-1">
+                             <h2 class="h3">العنوان</h2>
+                             <p class="address">
+                                 السعودية-القصيم-طريق الأربعين<br/>
+                                 مقابل بنك الراجحي
+                             </p>
+                             <h2 class="h3">الهاتف</h2>
+                             <p class="address">
+                                 00970599020619
+                             </p>
 
-                        </div>-->
+                         </div>-->
                     </div>
 
                 </div>
@@ -119,22 +130,28 @@
 
         <div class="page-section section-blue section-center">
             <div class="container">
-                <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
+                <h2 class="section-title">حلّق مع هُدهُد</h2>
 
-                <form method="post" action="" class="register-form">
-                    <input type="hidden" name="action" value="register"/>
-                                    <input style="display: none;" name="email" value="" autocomplete="off">
+                <a class="btn btn-primary-light btn-lg" href="/join_us">
+                    اشترك الآن
+                </a>
 
-                    <div class="register-container">
-                        <div class="form-group">
-                            <input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>
-                        </div>
-                        <div class="form-group">
-                            <input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>
-                        </div>
-                        <button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>
-                    </div>
-                </form>
+                {#                <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+                {##}
+                {#                <form method="post" action="" class="register-form">#}
+                {#                    <input type="hidden" name="action" value="register"/>#}
+                {#                                    <input style="display: none;" name="email" value="" autocomplete="off">#}
+                {##}
+                {#                    <div class="register-container">#}
+                {#                        <div class="form-group">#}
+                {#                            <input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>#}
+                {#                        </div>#}
+                {#                        <div class="form-group">#}
+                {#                            <input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>#}
+                {#                        </div>#}
+                {#                        <button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>#}
+                {#                    </div>#}
+                {#                </form>#}
 
             </div>
         </div>
@@ -145,6 +162,6 @@
 
 <div>
     {% block footer %}
-        {%- block top_footer -%}	{% include "templates/includes/footer/top_footer.html" %} {%- endblock -%}
+        {%- block top_footer -%}    {% include "templates/includes/footer/top_footer.html" %} {%- endblock -%}
     {% endblock %}
 </div>
