--- a/essal/templates/pages/features.html
+++ b/essal/templates/pages/features.html
@@ -36,15 +36,13 @@
 
 			<div class="features features-icon-top features-center">
 				<div class="row">
-					<div class="col-sm-6 col-md-3 col-xs-12">
+                    <div class="col-sm-6 col-md-3 col-xs-12">
 						<div class="feature">
-							<a href="/details?title=نظام المحاسبة">
-								<i class="icon icon-lg account-system animate zoomIn"></i>
-								<h4>نظام المحاسبة</h4>
+							<a href="/details?title=نظام جمع التبرعات">
+								<i class="icon icon-lg manufacture-system animate zoomIn"></i>
+								<h4>نظام جمع التبرعات</h4>
 							</a>
-							<p>
-								فوترة جميع المعاملات المحاسبية من: المبيعات والمشتريات والعمليات الأخرى
-							</p>
+							<p>تنظيم جمع التبرعات بإسلوب سهل.</p>
 						</div>
 					</div>
 					<!-- /.feature -->
@@ -122,11 +120,13 @@
 					<div class="clear-xs"></div>
 					<div class="col-sm-6 col-md-3 col-xs-12">
 						<div class="feature">
-							<a href="/details?title=إدارة التصنيع و الإنتاج">
-								<i class="icon icon-lg manufacture-system animate zoomIn"></i>
-								<h4>إدارة التصنيع و الإنتاج</h4>
+							<a href="/details?title=نظام المحاسبة">
+								<i class="icon icon-lg account-system animate zoomIn"></i>
+								<h4>نظام المحاسبة</h4>
 							</a>
-							<p>تخطيط تكلفة المنتج، خطة الإنتاج، إنشاء طلبات وعمليات الإنتاج اللازمة.</p>
+							<p>
+								فوترة جميع المعاملات المحاسبية من: المبيعات والمشتريات والعمليات الأخرى
+							</p>
 						</div>
 					</div>
 
@@ -224,22 +224,28 @@
 	<!-- /.page-section -->
 		<div class="page-section section-blue section-center">
 		<div class="container">
-			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
+            <h2 class="section-title">حلّق مع هُدهُد</h2>
 
-			<form method="post" action="" class="register-form">
-				<input type="hidden" name="action" value="register"/>
-								<input style="display: none;" name="email" value="" autocomplete="off">
+            <a class="btn btn-primary-light btn-lg" href="/join_us">
+                اشترك الآن
+            </a>
 
-				<div class="register-container">
-					<div class="form-group">
-						<input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>
-					</div>
-					<div class="form-group">
-						<input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>
-					</div>
-					<button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>
-				</div>
-			</form>
+{#			<h2 class="section-title">اشترك اﻵن في هُدهُد</h2>#}
+{##}
+{#			<form method="post" action="" class="register-form">#}
+{#				<input type="hidden" name="action" value="register"/>#}
+{#								<input style="display: none;" name="email" value="" autocomplete="off">#}
+{##}
+{#				<div class="register-container">#}
+{#					<div class="form-group">#}
+{#						<input name="email" class="form-control input-lg" type="text" placeholder="البريد الالكتروني" required/>#}
+{#					</div>#}
+{#					<div class="form-group">#}
+{#						<input name="password" class="form-control input-lg" type="password" placeholder="كلمة المرور" required/>#}
+{#					</div>#}
+{#					<button class="btn btn-primary-light btn-lg" type="submit">الاشتراك</button>#}
+{#				</div>#}
+{#			</form>#}
 
 		</div>
 	</div>
