--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -9,32 +9,38 @@
 
                 <h1 class="slogan-desc">نظام مالي و إداري سحابي حاصل على ثقة العديد من الجمعيات والمؤسسات الخيرية</h1>
                 <br>
-                <h2 class="slogan-desc"><strong>كن جزء من الإبداع، قم بالتسجيل الآن ليكون لك الأولوية عند الإطلاق</strong></h2>
+                <h2 class="slogan-desc"><strong>كن جزء من الإبداع، قم بالتسجيل الآن ليكون لك الأولوية عند
+                    الإطلاق</strong></h2>
 
-                <form method="post" action="" class="register-form">
-                    <input type="hidden" name="action" value="register"/>
-                    <input style="display: none;" name="email" value="" autocomplete="off">
+                {#                <form method="post" action="" class="register-form">#}
+                {#                    <input type="hidden" name="action" value="register"/>#}
+                {#                    <input style="display: none;" name="email" value="" autocomplete="off">#}
+                {##}
+                {#                    <div class="register-container" style="direction:rtl">#}
+                {#                        <div class="form-group">#}
+                {#                            <input name="emai" class="form-control input-lg" type="text"#}
+                {#                                   placeholder="البريد الالكتروني"/>#}
+                {#                        </div>#}
+                {#                        <div class="form-group">#}
+                {#                            <input name="password" class="form-control input-lg" type="text"#}
+                {#                                   placeholder="اسم الشركة"/>#}
+                {#                        </div>#}
+                {#                        <button id='join-button' class="btn btn-primary-light btn-lg" type="submit">#}
+                {#                            الاشتراك#}
+                {#                        </button>#}
+                {#                    </div>#}
+                {#                    <div class="row">#}
+                {#                        <div id="contact-alert"#}
+                {#                             class="alert"#}
+                {#                             style="display: none;">&nbsp;#}
+                {#                        </div>#}
+                {#                    </div>#}
+                {#                </form>#}
 
-                    <div class="register-container" style="direction:rtl">
-                        <div class="form-group">
-                            <input name="emai" class="form-control input-lg" type="text"
-                                   placeholder="البريد الالكتروني"/>
-                        </div>
-                        <div class="form-group">
-                            <input name="password" class="form-control input-lg" type="text"
-                                   placeholder="اسم الشركة"/>
-                        </div>
-                        <button class="btn btn-primary-light btn-lg" type="submit">
-                            الاشتراك
-                        </button>
-                    </div>
-                    <div class="row">
-                        <div id="contact-alert"
-                             class="alert"
-                             style="display: none;">&nbsp;
-                        </div>
-                    </div>
-                </form>
+                <a class="btn btn-primary-light btn-lg" href="/join_us">
+                    اشترك مع هُدهُد
+                </a>
+
             </div>
         </div>
         <!-- /.banner-slogan -->
@@ -164,8 +170,8 @@
                     <div class="row">
                         <div class="col-sm-3 col-xs-6">
                             <div class="feature">
-                                <i class="icon icon-lg account-system animate zoomIn"></i>
-                                <h4>نظام المحاسبة</h4>
+                                <i class="icon icon-lg manufacture-system animate zoomIn"></i>
+                                <h4>نظام جمع التبرعات</h4>
                             </div>
                         </div>
                         <!-- /.feature -->
@@ -210,8 +216,8 @@
                         <div class="clear-xs"></div>
                         <div class="col-sm-3 col-xs-6">
                             <div class="feature">
-                                <i class="icon icon-lg manufacture-system animate zoomIn"></i>
-                                <h4>إدارة التصنيع و الإنتاج</h4>
+                                <i class="icon icon-lg account-system animate zoomIn"></i>
+                                <h4>نظام المحاسبة</h4>
                             </div>
                         </div>
                         <!-- /.feature -->
@@ -238,25 +244,29 @@
     <!-- /.page-section -->
     <div class="page-section section-blue section-center">
         <div class="container">
-            <h2 class="section-title">اشترك اﻵن في هُدهُد</h2>
+            <h2 class="section-title">حلّق مع هُدهُد</h2>
 
-            <form method="post" action="" class="register-form">
-                <input type="hidden" name="action" value="register"/>
-                <input style="display: none;" name="email" value="" autocomplete="off">
+            <a class="btn btn-primary-light btn-lg" href="/join_us">
+                اشترك الآن
+            </a>
 
-                <div class="register-container" style="direction:rtl">
-                    <div class="form-group pull-left">
-                        <input name="emai" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"/>
-                    </div>
-                    <div class="form-group">
-                        <input name="password" class="form-control input-lg" type="text"
-                               placeholder="اسم الشركة"/>
-                    </div>
-                    <button class="btn btn-primary-light btn-lg" type="submit">
-                        الاشتراك
-                    </button>
-                </div>
-            </form>
+{#            <form method="post" action="" class="register-form">#}
+{#                <input type="hidden" name="action" value="register"/>#}
+{#                <input style="display: none;" name="email" value="" autocomplete="off">#}
+{##}
+{#                <div class="register-container" style="direction:rtl">#}
+{#                    <div class="form-group pull-left">#}
+{#                        <input name="emai" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"/>#}
+{#                    </div>#}
+{#                    <div class="form-group">#}
+{#                        <input name="password" class="form-control input-lg" type="text"#}
+{#                               placeholder="اسم الشركة"/>#}
+{#                    </div>#}
+{#                    <button class="btn btn-primary-light btn-lg" type="submit">#}
+{#                        الاشتراك#}
+{#                    </button>#}
+{#                </div>#}
+{#            </form>#}
 
         </div>
     </div>
