--- a/essal/templates/pages/home.html
+++ b/essal/templates/pages/home.html
@@ -41,6 +41,28 @@
                     اشترك مع هُدهُد
                 </a>
 
+                <div class="partners hidden-xs">
+                    <h2 class="section-title">شركاء النجاح</h2>
+
+                    <ul>
+                        <li>
+                            <a href="http://www.exaserve.com/" target="_blank" title="اكسا سيرف">
+                                <img src="assets/essal/img/partners/exaserve2.jpeg" alt="اكسا سيرف">
+                            </a>
+                        </li><li>
+                            <a href="https://www.mcit.gov.sa/" target="_blank" title="وزارة الاتصالات وتقنية المعلومات">
+                                <img src="assets/essal/img/partners/saudi-it-m.jpeg"
+                                     alt="وزارة الاتصالات وتقنية المعلومات">
+                            </a>
+                        </li><li>
+                            <a href="https://altqniah.sa/" target="_blank" title="التقنية المباركة">
+                                <img src="assets/essal/img/partners/taqania-logo.jpeg" alt="التقنية المباركة">
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+
             </div>
         </div>
         <!-- /.banner-slogan -->
@@ -250,27 +272,28 @@
                 اشترك الآن
             </a>
 
-{#            <form method="post" action="" class="register-form">#}
-{#                <input type="hidden" name="action" value="register"/>#}
-{#                <input style="display: none;" name="email" value="" autocomplete="off">#}
-{##}
-{#                <div class="register-container" style="direction:rtl">#}
-{#                    <div class="form-group pull-left">#}
-{#                        <input name="emai" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"/>#}
-{#                    </div>#}
-{#                    <div class="form-group">#}
-{#                        <input name="password" class="form-control input-lg" type="text"#}
-{#                               placeholder="اسم الشركة"/>#}
-{#                    </div>#}
-{#                    <button class="btn btn-primary-light btn-lg" type="submit">#}
-{#                        الاشتراك#}
-{#                    </button>#}
-{#                </div>#}
-{#            </form>#}
+            {#            <form method="post" action="" class="register-form">#}
+            {#                <input type="hidden" name="action" value="register"/>#}
+            {#                <input style="display: none;" name="email" value="" autocomplete="off">#}
+            {##}
+            {#                <div class="register-container" style="direction:rtl">#}
+            {#                    <div class="form-group pull-left">#}
+            {#                        <input name="emai" class="form-control input-lg" type="text" placeholder="البريد الالكتروني"/>#}
+            {#                    </div>#}
+            {#                    <div class="form-group">#}
+            {#                        <input name="password" class="form-control input-lg" type="text"#}
+            {#                               placeholder="اسم الشركة"/>#}
+            {#                    </div>#}
+            {#                    <button class="btn btn-primary-light btn-lg" type="submit">#}
+            {#                        الاشتراك#}
+            {#                    </button>#}
+            {#                </div>#}
+            {#            </form>#}
 
         </div>
     </div>
     <!-- /.page-section -->
+
 
     </div>
     <script>
